#69 -> fixed - word wrap for card subtitle

--- a/sdnnt/src/main/ui/src/sass/_app-global.scss
+++ b/sdnnt/src/main/ui/src/sass/_app-global.scss
@@ -106,6 +106,10 @@ a {
   border-radius: $app-border-radius;
 }
 
+.app-break-w {
+  word-break: break-all;
+}
+
 table {
   // import table
   &.app-table-import {
